[workspace]
resolver = "2"
members = [
    "packages/mira-v1",
]

[workspace.package]
authors = ["Mira AMM"]
edition = "2021"
homepage = "https://mira.ly/"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/mira-amm/mira-v1-rs"
rust-version = "1.79.0"

[workspace.dependencies]
fuels = "0.66.7"
tokio = "1.12"
rand = "0.8.5"
sha2 = "0.10.8"
primitive-types = "0.13.1"
anyhow = "1.0.89"
